# treasuryforge

./: .dockerignore  .gitignore  Dockerfile  Makefile  PHASE2_DISCOVERY.md  PHASE3_IMPLEMENTATION.md  PRODUCTION_ROADMAP.md  README.md  RESEARCH_arbitrage.md  RESEARCH_strategies.md  ROADMAP.md  SCOPE.md  docker-compose.yml  phase2_data.json  phase3_data.json  pyproject.toml  requirements-dev.txt  requirements-live.txt  run_demo.py  sonar-project.properties  vercel.json
.github/workflows/: ci.yml
api/: Dockerfile  main.py
demo/: README.md  demo.js  index.html  styles.css  vercel.json
deploy/: README.md  bitso.env.example  set_hl_secret.sh  set_secret.sh  setup_on_vps.sh  treasuryforge-orchestrator.service  treasuryforge-report.service  treasuryforge-report.timer  treasuryforge-scalp.service  treasuryforge-shadow.service  treasuryforge-shadow.timer  treasuryforge-spread.service  treasuryforge.service
docs/: treasuryforge_money_flow.html  treasuryforge_technical.html
scripts/: _coinbase.py  _dump.sh  _gate.py  _klines.py  _mut_copy.sh  _show_survivors.sh  assess_pairs.py  assess_strategy.py  backtest_funding.py  backtest_mr_scalp.py  backtest_pairs.py  build_market_db.py  carry_backtest_run.py  carry_screen.py  ci.ps1  ci.sh  cross_venue_duty.py  cross_venue_econ.py  cross_venue_persistence.py  cross_venue_scan.py  cross_venue_survival.py  dry_run_e2e.py  funding_persistence.py  funding_predict.py  hl_dryrun.py  hl_live_order.py  hl_scalp.py  hl_sign_check.py  ignition_detector.py  ignition_score.py  import_bitso_key.py  log_cross_spread.py  log_cross_spread_3venue.py  log_multivenue_spread.py  mark_pick.py  momentum_validate.py  moonshot_coinbase.py  moonshot_gate.py  moonshot_scan.py  mutation.sh  (+26 more)
tests/backtest/: test_metrics_mutation.py  test_mr_scalp_backtest.py  test_sizing_backtest.py
tests/core/: _crash_child.py  test_analyst.py  test_broker.py  test_capital_protocol.py  test_carry_backtest.py  test_carry_portfolio_allocator.py  test_carry_screener.py  test_consultants.py  test_crash_safety.py  test_cross_venue.py  test_cross_venue_economics.py  test_cross_venue_legger.py  test_deployment_gate.py  test_live.py  (+31 more)
treasuryforge/: __init__.py  agent.py  analyst.py  audit.py  broker.py  carry_backtest.py  carry_portfolio_allocator.py  carry_screener.py  consultants.py  cross_venue.py  cross_venue_economics.py  cross_venue_legger.py  deployment_gate.py  economic_gate.py  executor.py  fill_model.py  funding_persistence.py  funding_predictor.py  journal.py  live.py  loss_limits.py  market.py  maturity.py  momentum_backtest.py  opportunity_duty_cycle.py  orders.py  pnl_decomposition.py  policy.py  preflight.py  promotion_gate.py  relay_feed.py  run_live.py  runner.py  scalp_shadow.py  selection_score.py  service.py  shadow.py  shadow_basis.py  sizing.py  staleness.py  (+6 more)
(+77 files in other folders)
